--- a/docs/.vuepress/theme/vuepress-theme-reco/templates/index.dev.html
+++ b/docs/.vuepress/theme/vuepress-theme-reco/templates/index.dev.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="generator" content="VuePress {{ version }}">
+  <link rel=stylesheet href="//at.alicdn.com/t/font_1210938_09onhf0dgcpq.css">
   <script>
 		(function() {
       const userMode = localStorage.getItem('vuepress-reco-color-scheme') || 'auto';
@@ -18,4 +19,13 @@
 <body>
 	<div id="app"></div>
 </body>
+
+ <script>
+	function soso(date){
+     console.log("接收到数据",date)
+	 var key = date.s;
+	 // console.log(key);
+	 document.getElementById("dataFromBd").value=key;
+}
+ </script>
 </html>
